# chronikl

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  build.rs  install.sh
.github/workflows/: ci.yml  docs.yml  release.yml  wiki-sync.yml
docs/: 01-Installation.md  02-Quick-Start.md  03-Providers.md  04-Configuration.md  04-GitHub-Models.md  05-Configuration.md  05-Voice.md  06-CI-Integration.md  06-Voice.md  07-CI-Integration.md  07-CLI-Reference.md  08-CLI-Reference.md  08-Licensing.md  09-Licensing.md  09-Troubleshooting.md  10-Troubleshooting.md  Home.md  _Sidebar.md
src/: ci.rs  constants.rs  env.rs  http.rs  lib.rs  main.rs  progress.rs
src/audit/: mod.rs
src/cache/: disk.rs  mod.rs
src/cli/: args.rs  mod.rs
src/config/: loader.rs  mod.rs
src/enrichment/: github.rs  mod.rs  noop.rs  platform.rs  remote.rs
src/git/: conventional.rs  merge_style.rs  mod.rs
src/ladder/: mod.rs  tier0.rs  tier1.rs  tier2.rs  tier3.rs
src/license/: mod.rs
src/models/: classification.rs  mod.rs  pr.rs  release.rs  tokens.rs
src/output/: markdown.rs  mod.rs
src/project/: mod.rs
src/prompts/: bump_initial_calver.md  bump_initial_semver.md  bump_major_calver.md  bump_major_semver.md  bump_minor_calver.md  bump_minor_semver.md  bump_patch_calver.md  bump_patch_semver.md  mod.rs  prerelease_addendum.md  tier1_system.md  tier2_system.md  tier3_self_repair.md  tier3_system.md
src/prose/: mod.rs  prompts.rs
src/providers/: agent_loop.rs  mock.rs  mod.rs  response.rs  rig.rs
src/telemetry/: mod.rs
src/tools/: budget.rs  git_show.rs  list_directory.rs  mod.rs  read_file.rs  search_text.rs  submit_classification.rs
src/update/: mod.rs
src/voice/: mod.rs  prose.md  terse.md
tests/: cache_integration.rs  config_voice_integration.rs  e2e_profiles.rs  enrichment_integration.rs  git_integration.rs  license_integration.rs  mock_provider_integration.rs  prose_integration.rs  release_kind_integration.rs  release_notes_integration.rs  tier2_integration.rs
tools/: issue_license.rs  keygen.rs
